# projeto-01-luiza

backend/: pyproject.toml
backend/config/: settings.py
backend/pessoas/: admin.py  models.py
backend/pessoas/migrations/: 0001_initial.py  0002_cidade.py  0003_pessoas.py  0004_rename_pessoas_pessoa.py
