[project]
name = "backend"
version = "0.1.0"
description = "Projeto Integador Back-end"
authors = [
    {name = "luizawestruppdocarmo", email = "luizawestruppdocarmo@gmail.com"},
]
dependencies = ["django>=4.2.21"]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
